kubernetes/main/apps/network/traefik/config/ingress-routes/traefik-external/ingressroute-plex.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress-ext.haynesnetwork.com
    external-dns.kubernetes.io/target: ingress-ext.haynesnetwork.com
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/href: "https://plex.haynesnetwork.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Unraid
    gethomepage.dev/name: Plex
    gethomepage.dev/description: Primary media server (stays on Unraid)
    gethomepage.dev/icon: plex
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`plex.haynesnetwork.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: haynestower
          port: 32400
      middlewares:
        - name: default-headers
  tls:
    secretName: certificate-haynesnetwork
